<resources>
    <string name="app_name">Lop</string>
    <string name="splash_version_info_name">杂货铺子客户端</string>
    <string name="splash_version_info_number">Version 0.1.1</string>
    <string name="index_search_edit_hint">搜索杂货商品</string>

    <!-- 菜单 -->
    <string name="menu_setting">设置</string>
    <string name="menu_history">浏览历史</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_help">帮助</string>
    <string name="menu_about">关于</string>
    <string name="menu_exit">退出</string>
    <!-- 菜单 -->


    <!-- 首页PopupWnidow -->
    <string name="barcode_buy">条码购</string>
    <string name="camera_buy">拍照购</string>
    <string name="color_buy">颜色购</string>
    <!-- 首页PopupWnidow -->


    <!-- 首页 -->
    <string name="index_order">订单状态</string>
    <string name="index_history">浏览历史</string>
    <string name="index_collect">我的关注</string>
    <string name="index_life_journey">生活娱乐</string>
    <string name="index_commodityinfo_browse_tv">二手物品浏览</string>
    <string name="index_rentinfo_browse_tv">出租物品浏览</string>
    <string name="index_buying">求购信息</string>
    <string name="index_rent">出租信息</string>
    <string name="index_borrow">求租信息</string>
    <!-- 首页 -->

    <!-- 商品分类 -->
    <string name="category">全部分类</string>
    <!-- 二维码 -->
    <string name="scan_tip">请将二维码置于取景框内扫描</string>
    <string name="scan_retry">二维码扫描出错啦,请重新扫描</string>
    <string name="scan_title">扫一扫</string>

    <!--搜索界面-->
    <string name="search_info">暂无搜索结果</string>

    <!-- 个人中心 -->
    <string name="personal_title">我的购物车</string>
    <string name="personal_more">更多</string>
    <string name="personal_welcome">欢迎来到杂货铺子</string>
    <string name="personal_login">登录</string>
    <string name="personal_fast_search">订单状态速查</string>
    <string name="personal_wait_pay">待付款订单</string>
    <string name="personal_all_order">全部订单</string>
    <string name="personal_my_focus">我的关注</string>
    <string name="personal_comment">商品评价/晒单</string>
    <string name="personal_information">消息中心</string>
    <string name="personal_quick_buy">轻松购</string>
    <string name="personal_account">账户安全</string>
    <string name="personal_order_center">订单中心</string>
    <string name="personal_account_center">账户中心</string>
    <string name="personal_customer_service">客户服务</string>
    <string name="personal_quit">退出应用</string>

    <!-- 个人用户信息界面 -->
    <string name="personal_center_signout_msg">退出登录</string>
    <string name="personal_center_title">个人信息</string>
    <string name="personal_center_real_name_authen_textview_msg">实名认证</string>
    <string name="personal_center_real_name_authen_no_msg">未认证</string>
    <string name="personal_center_real_name_authen_continue_msg">正在验证</string>
    <string name="personal_center_real_name_authen_yes_msg">已认证</string>
    <string name="personal_center_publish_textview_msg">我要发布</string>
    <string name="personal_center_buying_textview_msg">我要求购</string>
    <string name="personal_center_rent_textview_msg">我要出租</string>
    <string name="personal_center_borrow_textview_msg">我要求租</string>

    <!-- 登陆界面 -->
    <string name="login">登录</string>
    <string name="loginacount">手机号:</string>
    <string name="loginpassword">密   码：</string>
    <string name="inputpassword">请输入密码</string>
    <string name="inputaccount">请输入账号</string>
    <string name="register">快速注册</string>
    <string name="login_btn">登   录</string>
    <string name="login_loading">正在登錄，請稍候。。</string>


    <!--  购物车 -->
    <string name="cart">购物车</string>
    <string name="cartinfo_no">您的购物车是空的，快去选购吧！</string>
    <string name="cartinfo_synchronous">购物车同步中</string>
    <string name="cart_logininfo">您可以在登录后系统后同步电脑与手机购物 \n车中的商品</string>
    <string name="cart_market">促销大卖场</string>

    <!--   更多 -->
    <string name="more">更多</string>

    <string name="more_history">浏览记录</string>
    <string name="more_seting">设置</string>
    <string name="more_help">帮助 </string>
    <string name="more_opinion">意见反馈</string>
    <string name="more_aboutus">关于我们</string>
    <string name="more_update">检测更新</string>
    <string name="more_exit">退出</string>
    <string name="more_apps">应用推荐</string>


    <!-- 注册 -->
    <string name="registerinfo">输入手机号后，点击"获取密码"，系统会自动向你的手机发送一条短信</string>
    <string name="register_tip">【提示】\n 1.使用手机号注册免费 \n 2.此手机号用来登录杂货铺子\n 3.你还可以选择其他注册方式</string>
    <string name="register_in_normal">普通用户注册</string>
    <string name="register_normal_useraccount">帐户名：</string>
    <string name="register_normal_useraccount_hint">请输入你的手机号</string>
    <string name="register_normal_email">邮箱：</string>
    <string name="register_normal_email_hint">请输入邮箱帐号</string>
    <string name="register_normal_password">密码：</string>
    <string name="register_normal_password_hint">请输入密码</string>
    <string name="register_normal_repassword">确认密码：</string>
    <string name="register_normal_repassword_hint">请输入确认密码</string>

    <!--注册界面信息（My）-->
    <string name="register_info_title_textview">快速注册</string>
    <string name="register_info_username">手机号：</string>
    <string name="register_info_username_edittext">请输入你的手机号</string>
    <string name="register_info_regist_button">下一步</string>

    <!--手机号验证界面（My）-->
    <string name="authon_phonenumber_textview">校验手机号</string>
    <string name="authen_phonenumber_textview_msg">请输入收到的短信验证码</string>
    <string name="authen_phonenumber_edittext_hint">请输入验证码</string>
    <string name="authen_phonenumber_get_authen_code">获取验证码</string>
    <string name="authen_phonenumber_authen">验证短信验证码</string>

    <!--设置密码界面（My）-->
    <string name="set_password_textview">设置密码</string>
    <string name="set_password_textview_msg">请设置账户密码</string>
    <string name="set_password_password">密码:</string>
    <string name="set_password_edittext_msg">请输入密码</string>
    <string name="set_password_repassword">确认密码:</string>
    <string name="set_password_repassword_edittext_msg">请输入确认密码</string>
    <string name="set_password_button">注册</string>


    <!--实名认证界面（My）-->
    <string name="real_name_authen_title_textview">个人信息实名认证</string>
    <string name="real_name_authen_permission_textview">身份:</string>
    <string name="real_name_authen_college_textview">所在学院：</string>
    <string name="real_name_authen_class_textview">班级：</string>
    <string name="real_name_authen_student_id_textview">学号：</string>
    <string name="real_name_authen_student_name_textview">真实姓名：</string>
    <string name="real_name_authen_phone_number_textview">手机号：</string>
    <string name="real_name_authen_class_hint">输入你的班级</string>
    <string name="real_name_authen_student_id_hint">输入你的学号</string>
    <string name="real_name_authen_student_name_hint">输入你的真实姓名</string>
    <string name="register_info_email">电子邮箱:</string>
    <string name="real_name_authen_commit_button">提交</string>
    <string-array name="permission">
        <item>管理员</item>
        <item>班长</item>
        <item>学生</item>
        <item>注册用户</item>
        <item>游客</item>
    </string-array>
    <string-array name="college_names">
        <item>机电工程学院</item>
        <item>机械与动力工程学院</item>
        <item>材料科学与工程学院</item>
        <item>化工与环境学院</item>
        <item>信息与通信工程学院</item>
        <item>仪器与电子学院</item>
        <item>计算机与控制工程学院</item>
        <item>理学院</item>
        <item>经济与管理学院</item>
        <item>人文社会科学学院</item>
        <item>体育学院</item>
        <item>艺术学院</item>
        <item>软件学院</item>
        <item>研究生院</item>
        <item>继续教育学院</item>
        <item>后备军官教育学院（武装部）</item>
        <item>国际教育学院（筹）</item>
        <item>信息商务学院</item>
        <item>中北大学朔州校区</item>
    </string-array>

    <!--显示已经通过认证认证的个人信息-->
    <string name="show_certified_info_title">认证信息</string>

    <!--处理请求认证ListView界面Item-->
    <string name="listview_adapter_authen_request_studentid">学号：</string>
    <string name="listview_adapter_authen_request_name">姓名：</string>

    <!--处理认证请求的ListView-->
    <string name="listview_authen_request_title_tv">认证请求</string>

    <!--处理认证请求的Activity-->
    <string name="authen_request_handle_title">认证请求处理</string>
    <string name="authen_request_handle_name">姓名：</string>
    <string name="authen_request_handle_studentid">学号：</string>
    <string name="authen_request_handle_class">班级：</string>
    <string name="authen_request_handle_college">学院：</string>
    <string name="authen_request_handle_permission">身份：</string>
    <string name="authen_request_handle_email">电子邮箱：</string>

    <string name="authen_confirm">确认</string>


    <!-- 导航栏的其他的标题和其他 -->
    <string name="clothingcity">服装城</string>
    <string name="hotproduct">热卖商品</string>
    <string name="digital">数码家电馆</string>
    <string name="ebook">好书汇</string>
    <string name="daily">百货集</string>

    <!-- JazzyViewPager -->
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <!-- JazzyViewPager -->


    <!--发布商品信息界面-->
    <string name="publish_title">我要发布</string>
    <string name="publish_btn_msg">确认发布</string>
    <string name="publish_item_title_et_msg">标题</string>
    <string name="publish_item_description_et_msg">描述一下你的闲置</string>
    <string name="publish_price_title_msg">价格</string>
    <string name="publish_original_title_msg">原价</string>
    <string name="publish_default_price">0.00</string>
    <string name="publish_classification">请选择分类</string>
    <string name="publish_classification_title_msg">分类</string>
    <string name="publish_category_list_title">类目</string>
    <string name="publish_money_symbol">¥</string>

    <!--商品求购界面-->
    <string name="buying_title">我要求购</string>
    <string name="buying_deadline_date_title_msg">截止日期</string>
    <string name="buying_deadline_date">请输入截止日期</string>
    <string name="buying_deadline_time_title_msg">截止时间</string>
    <string name="buying_deadline_time">请输入截止时间</string>
    <string name="buying_btn_msg">确认求购</string>

    <!--商品出租界面-->
    <string name="rent_title">我要出租</string>
    <string name="rent_btn_msg">确认出租</string>

    <!--商品求租界面-->
    <string name="borrow_title">我要求租</string>
    <string name="borrow_btn_msg">确认求租</string>

    <!--列表  商品信息缩略-->
    <string name="list_commodityinfo_index_college">来自:</string>
    <string name="list_commodityinfo_index_category">类别:</string>

    <!--商品详情-->
    <string name="product_details_top_title_msg">物品详情</string>
    <string name="buy_btn_msg">我想要</string>

    <!--交易界面-->
    <string name="bargain_title">正在交易</string>
    <string name="bargain_text1">系统提示：</string>
    <string name="bargain_text2">请及时与卖家进行电话联系！</string>
    <string name="bargain_phone_msg">联系电话：</string>
    <string name="bargain_success">交易成功</string>
    <string name="bargain_cancel">交易取消</string>
    
    <!--用户评价界面-->
    <string name="credit_title">交易评价</string>
    <string name="credit_content_hint">请输入您的评价内容</string>
    <string name="credit_users_ratingbar">卖家评分</string>
    <string name="credit_commodity_ratingbar">商品评分</string>
    <string name="credit_commoit">提交评价</string>

    <!--聊天界面-->
    <string name="chat_top_title_msg">会话</string>

    <!--IMBmob-->
    <string name="action_settings">Settings</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="longclick_speak">长按说话</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="picture">照片</string>

</resources>