<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_register_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/real_name_authen_titile"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/android_title_bg"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/real_name_authen_back_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/left_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/real_name_authen_title_textview"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/real_name_authen_permission_textview"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/real_name_authen_permission_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/real_name_authen_college_textview"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/real_name_authen_college_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/real_name_authen_class_textview"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/real_name_authen_class_number_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/category_selection_gridview_bg"
                android:focusableInTouchMode="true"
                android:hint="@string/real_name_authen_class_hint"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/real_name_authen_student_id_textview"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/real_name_authen_student_id_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/category_selection_gridview_bg"
                android:focusableInTouchMode="true"
                android:hint="@string/real_name_authen_student_id_hint"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/real_name_authen_student_name_textview"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/real_name_authen_student_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/category_selection_gridview_bg"
                android:focusableInTouchMode="true"
                android:hint="@string/real_name_authen_student_name_hint"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/register_info_email"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/real_name_authen_email_number_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/category_selection_gridview_bg"
                android:focusableInTouchMode="true"
                android:inputType="textEmailAddress" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/real_name_authen_commit_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:text="@string/real_name_authen_commit_button"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>