<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_register_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/authen_phonenumber_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/android_title_bg"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/authen_phonenumber_back_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/left_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/authon_phonenumber_textview"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/authen_phonenumber_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/authen_phonenumber_textview_msg"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/authen_phonenumber_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_weight="9"
                android:background="@drawable/category_selection_gridview_bg"
                android:hint="@string/authen_phonenumber_edittext_hint"
                android:inputType="number" />

            <Button
                android:id="@+id/authen_phonenumber_get_authen_code_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/authen_phonenumber_get_authen_code"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/authen_phonenumber_authen_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/authen_phonenumber_authen"
            android:textSize="20sp" />


    </LinearLayout>

</LinearLayout>