<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_register_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/register_info_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/android_title_bg"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/register_info_back_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/left_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/register_info_title_textview"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/register_info_username"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/register_info_username_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/category_selection_gridview_bg"
                android:hint="@string/register_info_username_edittext"
                android:inputType="phone" />
        </LinearLayout>

        <Button
            android:id="@+id/register_info_regist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/edit_product_num_cancle_normal"
            android:gravity="center"
            android:text="@string/register_info_regist_button"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>